resources/about-me/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: about-me
spec:
  replicas: 1
  selector:
    matchLabels:
      app: about-me
  template:
    metadata:
      labels:
        app: about-me
    spec:
      containers:
      - name: web
        # renovate: datasource=docker depName=siegy22/web
        image: siegy22/web:1.1.0
        ports:
        - containerPort: 8080
