resources/about-me/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: about-me
spec:
  selector:
    app: about-me
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
